[package]
name = "atventure"
version = "0.1.3"
edition = "2021"
description = "TBD"
license = "GPL-3.0-only"
repository = "https://github.com/lesleyrs/atventure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26.1", default-features = false }
